// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single post component should be able to render correctly 1`] = `
<div>
  test
</div>
`;

exports[`Single post component should be able to render loading view correctly 1`] = `
<div>
  Loading...
</div>
`;

exports[`Single post component should be able to render loading view when there's no data 1`] = `
<div>
  Loading...
</div>
`;
